syntax = "proto3";

package pb;

import "account.proto";

option go_package = "github.com/RobinHood3082/simplebank/internal/pb";

message AddMoneyRequest {
    int64 account_id = 1;
    int64 amount = 2;
}

message AddMoneyResponse {
    Account account = 1;
}